Add new item functionality complete.

--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -33,7 +33,14 @@
                             <outlet property="delegate" destination="ati-25-uKm" id="VL8-ut-hZq"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="fUF-KY-NuQ"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="fUF-KY-NuQ">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="g0f-v7-6XL">
+                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="ati-25-uKm" id="oyd-yh-Whc"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q7g-ir-aCC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
